Изм 0.2 - Рефакторинг базовой стурктуры UI и разметки

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,14 +12,14 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="ru.vdv.myapp.myreadersdiary.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_reading_process"
+        android:name="ru.vdv.myapp.myreadersdiary.ui.readingProcess.ReadingProcessFragment"
+        android:label="@string/menu_reading_process"
+        tools:layout="@layout/fragment_reading_process" />
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:name="ru.vdv.myapp.myreadersdiary.ui.slideshow.SlideshowFragment"
+        android:name="ru.vdv.myapp.myreadersdiary.ui.statistics.StatisticsFragment"
         android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_statistics" />
 </navigation>
