--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,11 @@
         android:id="@+id/nav_home"
         android:name="ru.vdv.myapp.myreadersdiary.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_nav_home_to_bookDetailsFragment"
+            app:destination="@id/bookDetailsFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_reading_process"
@@ -18,8 +22,13 @@
         tools:layout="@layout/fragment_reading_process" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
+        android:id="@+id/nav_statistics"
         android:name="ru.vdv.myapp.myreadersdiary.ui.statistics.StatisticsFragment"
-        android:label="@string/menu_slideshow"
+        android:label="@string/menu_statistics"
         tools:layout="@layout/fragment_statistics" />
+    <fragment
+        android:id="@+id/bookDetailsFragment"
+        android:name="ru.vdv.myapp.myreadersdiary.ui.details.BookDetailsFragment"
+        android:label="@string/menu_bookDetailsFragment"
+        tools:layout="@layout/book_details_fragment" />
 </navigation>
