--- a/app/src/main/res/layout/book_details_fragment.xml
+++ b/app/src/main/res/layout/book_details_fragment.xml
@@ -1,13 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.details.BookDetailsFragment">
+    android:layout_height="match_parent">
 
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        android:layout_margin="4dp"
+        tools:context=".ui.details.BookDetailsFragment">
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/textView_book_details_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/textView_book_title_plug"
+            android:textAlignment="textStart"
+            android:textSize="20sp"
+            android:textStyle="bold|italic"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView_book_details_authors_of_the_book"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/textView_authors_of_the_book_plug"
+            android:textAlignment="textStart"
+            android:textColor="#66090909"
+            android:textSize="18sp"
+            android:textStyle="bold|italic"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textView_book_details_title" />
+
+        <ImageView
+            android:id="@+id/imageView_book_details_cover"
+            android:layout_width="150dp"
+            android:layout_height="220dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView_book_details_authors_of_the_book"
+            app:srcCompat="@drawable/book_plug"
+            android:contentDescription="@string/ImageView_contentDescription_book_cover" />
+
+        <TextView
+            android:id="@+id/textView_book_details_genres"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/textView_book_details_stub"
+            android:textAlignment="textStart"
+            android:textSize="16sp"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView_book_details_cover"
+            app:layout_constraintTop_toTopOf="@+id/imageView_book_details_cover" />
+
+        <TextView
+            android:id="@+id/textView_book_details_duration"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/textView_book_details_duration"
+            android:textAlignment="textStart"
+            android:textSize="16sp"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView_book_details_cover"
+            app:layout_constraintTop_toBottomOf="@+id/textView_book_details_genres" />
+
+        <TextView
+            android:id="@+id/textView_book_details_rating"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/textView_book_details_rating"
+            android:textAlignment="textStart"
+            android:textSize="16sp"
+            android:textStyle="italic"
+            app:layout_constraintStart_toEndOf="@+id/imageView_book_details_cover"
+            app:layout_constraintTop_toBottomOf="@+id/textView_book_details_duration" />
+
+        <ImageView
+            android:id="@+id/imageView_book_details_rating"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="@+id/textView_book_details_rating"
+            app:layout_constraintStart_toEndOf="@+id/textView_book_details_rating"
+            app:layout_constraintTop_toTopOf="@+id/textView_book_details_rating"
+            app:srcCompat="@android:drawable/btn_star_big_on"
+            tools:ignore="ContentDescription" />
+
+        <TextView
+            android:id="@+id/textView_book_details_budget"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/default_text_book_details_budget"
+            android:textAlignment="textStart"
+            android:textSize="16sp"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView_book_details_cover"
+            app:layout_constraintTop_toBottomOf="@+id/textView_book_details_rating" />
+
+        <TextView
+            android:id="@+id/textView_book_details_revenue"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/default_text_book_details_revenue"
+            android:textAlignment="textStart"
+            android:textSize="16sp"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView_book_details_cover"
+            app:layout_constraintTop_toBottomOf="@+id/textView_book_details_budget" />
+
+        <TextView
+            android:id="@+id/textView_movie_details_book_details"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/default_text_book_details"
+            android:textAlignment="textStart"
+            android:textSize="16sp"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView_book_details_cover"
+            app:layout_constraintTop_toBottomOf="@+id/textView_book_details_revenue" />
+
+        <TextView
+            android:id="@+id/textView_book_details_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="viewStart"
+            android:textSize="18sp"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView_book_details_cover" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
