Изм 1.1 Расширение функционала приложения - добавлены (обозначены) фрагменты ввода данных о новой книге - добавлен фрагмент редактирования данных книги - добавлен фрагмент для фиксации процесса чтения книги - добавлен фрагмент настроек приложения и настроена навигация на него

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -28,7 +28,11 @@
         tools:layout="@layout/fragment_statistics" />
     <fragment
         android:id="@+id/bookDetailsFragment"
-        android:name="ru.vdv.myapp.myreadersdiary.ui.details.BookDetailsFragment"
+        android:name="ru.vdv.myapp.myreadersdiary.ui.book.BookDetailsFragment"
         android:label="@string/menu_bookDetailsFragment"
         tools:layout="@layout/book_details_fragment" />
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="ru.vdv.myapp.myreadersdiary.ui.user.SettingsFragment"
+        android:label="@string/settings_title" />
 </navigation>
