--- a/app/src/main/res/layout/fragment_reading_process.xml
+++ b/app/src/main/res/layout/fragment_reading_process.xml
@@ -17,6 +17,83 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.88" />
+
+    <Button
+        android:id="@+id/buttonGet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="GET"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonPost"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="POST"
+        app:layout_constraintEnd_toEndOf="@+id/buttonGet"
+        app:layout_constraintStart_toStartOf="@+id/buttonGet"
+        app:layout_constraintTop_toBottomOf="@+id/buttonGet" />
+
+    <Button
+        android:id="@+id/buttonPatch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="PATCH"
+        app:layout_constraintEnd_toEndOf="@+id/buttonPost"
+        app:layout_constraintStart_toStartOf="@+id/buttonPost"
+        app:layout_constraintTop_toBottomOf="@+id/buttonPost" />
+
+    <Button
+        android:id="@+id/buttonDelete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="DELETE"
+        app:layout_constraintEnd_toEndOf="@+id/buttonPatch"
+        app:layout_constraintStart_toStartOf="@+id/buttonPatch"
+        app:layout_constraintTop_toBottomOf="@+id/buttonPatch" />
+
+    <Button
+        android:id="@+id/buttonPut"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="PUT"
+        app:layout_constraintEnd_toEndOf="@+id/buttonDelete"
+        app:layout_constraintStart_toStartOf="@+id/buttonDelete"
+        app:layout_constraintTop_toBottomOf="@+id/buttonDelete" />
+
+    <Button
+        android:id="@+id/buttonHead"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="HEAD"
+        app:layout_constraintEnd_toEndOf="@+id/buttonPut"
+        app:layout_constraintStart_toStartOf="@+id/buttonPut"
+        app:layout_constraintTop_toBottomOf="@+id/buttonPut" />
+
+    <Button
+        android:id="@+id/buttonOption"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="OPTIONS"
+        app:layout_constraintEnd_toEndOf="@+id/buttonHead"
+        app:layout_constraintStart_toStartOf="@+id/buttonHead"
+        app:layout_constraintTop_toBottomOf="@+id/buttonHead" />
+
+    <Button
+        android:id="@+id/buttonHttp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="HTTP"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/buttonOption"
+        app:layout_constraintHorizontal_bias="0.583"
+        app:layout_constraintStart_toStartOf="@+id/buttonOption"
+        app:layout_constraintTop_toBottomOf="@+id/buttonOption"
+        app:layout_constraintVertical_bias="0.066" />
 </androidx.constraintlayout.widget.ConstraintLayout>
