--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,34 +1,44 @@
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory app:title="@string/messages_header">
+    <PreferenceCategory app:title="@string/main_settings_header">
 
         <EditTextPreference
-            app:key="signature"
-            app:title="@string/signature_title"
+            app:key="login"
+            app:title="@string/login_title"
+            app:useSimpleSummaryProvider="true" />
+        <EditTextPreference
+            app:key="name"
+            app:title="@string/name_title"
+            app:useSimpleSummaryProvider="true" />
+        <EditTextPreference
+            app:key="surname"
+            app:title="@string/surname_title"
             app:useSimpleSummaryProvider="true" />
 
         <ListPreference
-            app:defaultValue="reply"
-            app:entries="@array/reply_entries"
-            app:entryValues="@array/reply_values"
-            app:key="reply"
+            app:defaultValue="approved"
+            app:entries="@array/approved_entries"
+            app:entryValues="@array/approved_values"
+            app:key="need_for_approval"
             app:title="@string/reply_title"
             app:useSimpleSummaryProvider="true" />
 
     </PreferenceCategory>
 
-    <PreferenceCategory app:title="@string/sync_header">
+    <PreferenceCategory app:title="@string/approves_header">
 
         <SwitchPreferenceCompat
-            app:key="sync"
-            app:title="@string/sync_title" />
+            app:key="view_the_list_of_books"
+            app:summaryOff="@string/view_the_list_of_books_off"
+            app:summaryOn="@string/view_the_list_of_books_on"
+            app:title="@string/view_the_list_of_books_title" />
 
         <SwitchPreferenceCompat
-            app:dependency="sync"
-            app:key="attachment"
-            app:summaryOff="@string/attachment_summary_off"
-            app:summaryOn="@string/attachment_summary_on"
-            app:title="@string/attachment_title" />
+            app:dependency="view_the_list_of_books"
+            app:key="edit_the_list_of_books"
+            app:summaryOff="@string/edit_the_list_of_books_off"
+            app:summaryOn="@string/edit_the_list_of_books_on"
+            app:title="@string/edit_the_list_of_books_title" />
 
     </PreferenceCategory>
 
