Изм 1.5 main-fragment - создан стартовый фрагмент - настроена работа над отображением аватара, фона аватара и кастомного фона пользователя - подключен график - пончик - реализована передача данных во вью. Пока все очень просто с жесткими привязками и с явными ограхами без внедрения зависимостей и четкого разделения по слоям - ччтобы работало.

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@id/nav_main">
 
     <fragment
         android:id="@+id/nav_home"
@@ -35,4 +35,22 @@
         android:id="@+id/settingsFragment"
         android:name="ru.vdv.myapp.myreadersdiary.ui.user.SettingsFragment"
         android:label="@string/settings_title" />
+    <fragment
+        android:id="@+id/nav_main"
+        android:name="ru.vdv.myapp.myreadersdiary.ui.main.MainFragment"
+        android:label="@string/main_fragment_title"
+        tools:layout="@layout/main_fragment" >
+        <action
+            android:id="@+id/action_nav_main_to_nav_home"
+            app:destination="@id/nav_home" />
+        <action
+            android:id="@+id/action_nav_main_to_nav_reading_process"
+            app:destination="@id/nav_reading_process" />
+        <action
+            android:id="@+id/action_nav_main_to_settingsFragment"
+            app:destination="@id/settingsFragment" />
+        <action
+            android:id="@+id/action_nav_main_to_nav_statistics"
+            app:destination="@id/nav_statistics" />
+    </fragment>
 </navigation>
