Изм 1.6.2 edit settings Добавлен основной куратор

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -23,6 +23,11 @@
             app:title="@string/reply_title"
             app:useSimpleSummaryProvider="true" />
 
+        <EditTextPreference
+            app:key="main_curator"
+            app:title="@string/main_curator_title"
+            app:useSimpleSummaryProvider="true" />
+
     </PreferenceCategory>
 
     <PreferenceCategory app:title="@string/approves_header">
