Изм 1.7.7 полный рефакторинг UI файловой  структуры проекта

--- a/app/src/main/res/layout/book_details_fragment.xml
+++ b/app/src/main/res/layout/book_details_fragment.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="4dp"
-        tools:context=".ui.book.BookDetailsFragment">
+        tools:context=".ui.books.bookdetails.BookDetailsFragment">
 
         <TextView
             android:id="@+id/textView_book_details_title"
