--- a/app/src/main/res/layout/process_reading_book_fragment.xml
+++ b/app/src/main/res/layout/process_reading_book_fragment.xml
@@ -3,11 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.book.ProcessReadingBookFragment">
+    tools:context=".ui.books.readingprocess.ProcessReadingBookFragment">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        android:text="Фрагмент фиксирования времени чтения книги (для непосрественной фиксации
+        процесса, с часами-секундомером, напоминалками о необходимости отвлечься и продолжить
+         чтение" />
 
 </FrameLayout>
