--- a/app/src/main/res/layout/create_new_book_fragment.xml
+++ b/app/src/main/res/layout/create_new_book_fragment.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.book.CreateNewBookFragment">
+    tools:context=".ui.books.createbook.CreateNewBookFragment">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        android:text="Фрагмент формы создания новой записи о книге" />
 
 </FrameLayout>
