--- a/app/src/main/res/layout/fragment_summary_statistics.xml
+++ b/app/src/main/res/layout/fragment_summary_statistics.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.statistics.StatisticsFragment">
+    tools:context=".ui.statistics.SummaryStatisticsFragment">
 
     <TextView
         android:id="@+id/text_statistics"
