--- a/app/src/main/res/layout/fragment_temporary_fragment.xml
+++ b/app/src/main/res/layout/fragment_temporary_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.readingProcess.ReadingProcessFragment">
+    tools:context=".ui.temp.TempFragment">
 
     <TextView
         android:id="@+id/text_reading_process"
