--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,22 +3,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <group android:checkableBehavior="single">
+    <group
+        android:id="@+id/base_menu_group"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_main"
             android:icon="@drawable/ic_baseline_check_circle_outline_24"
             android:title="@string/menu_main" />
         <item
-            android:id="@+id/nav_home"
+            android:id="@+id/nav_list_of_books"
             android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
+            android:title="@string/menu_list_of_books" />
         <item
-            android:id="@+id/nav_reading_process"
-            android:icon="@drawable/ic_menu_reading_process"
-            android:title="@string/menu_reading_process" />
-        <item
-            android:id="@+id/nav_statistics"
+            android:id="@+id/nav_summary_statistics"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_statistics" />
+            android:title="@string/menu_summary_statistics" />
+    </group>
+    <group
+        android:id="@+id/temp_menu_group"
+        android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_create_new_book_Fragment"
+            android:icon="@drawable/ic_baseline_check_circle_outline_24"
+            android:title="@string/menu_create_book_fragment" />
+        <item
+            android:id="@+id/nav_edit_book_fragment"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="@string/menu_edit_book_fragment" />
+        <item
+            android:id="@+id/nav_book_details_fragment"
+            android:icon="@drawable/ic_menu_reading_process"
+            android:title="@string/menu_book_details_fragment" />
+        <item
+            android:id="@+id/nav_events_list_fragment"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="@string/menu_events_list_fragment" />
     </group>
 </menu>
