Изм 1.7.9 added events - RV общих событий добавлен, настроекн  - немного исправлен интерфейс, добавлен комментарий и разеден метод получения логов в общем для приложения и для конкреной книги.

--- a/app/src/main/res/layout/book_details_fragment.xml
+++ b/app/src/main/res/layout/book_details_fragment.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="4dp"
@@ -133,6 +134,19 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView_book_details_cover" />
+
+        <ImageView
+            android:id="@+id/imageView_book_reading_activity_graph"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:adjustViewBounds="false"
+            android:contentDescription="@string/ImageView_contentDescription_book_cover"
+            android:cropToPadding="false"
+            android:scaleType="fitXY"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView_book_details_description"
+            app:srcCompat="@drawable/line_graph_sh" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
