--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,7 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="elem_activity_graph_width">12dp</dimen>
+    <dimen name="elem_activity_graph_height">12dp</dimen>
+    <dimen name="elem_activity_graph_margin">2dp</dimen>
 </resources>
